Viewport Optix glitches #85148

Closed
opened 2021-01-28 11:59:47 +01:00 by ML · 13 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce RTX 2070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 461.09

Blender Version
Broken: version: 2.91.2, branch: master, commit date: 2021-01-19 16:15, hash: 5be9ef4177
Worked: (newest version of Blender that worked as expected)

Short description of error
There is a big difference in rendered preview with the optix denoiser between version 2.83.10 and 2.91.2. As you can see at the picture below, 2.83.10 do ton render glitches in the darker background. But the same scene with same optix denoiser in viewport does.
2.91.2
2912.png

vs
2.83.10
28310.png

Exact steps for others to reproduce the error
The only special thing in the scene is the area light with the power of (- 1 MW) .. yes minus one megawatt for generating darker places. Other is basically standard, some emissions and area lights.

there is the file I am working with. Tried even with the geforce rtx 3080 - same problem. Optix_err.blend

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce RTX 2070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 461.09 **Blender Version** Broken: version: 2.91.2, branch: master, commit date: 2021-01-19 16:15, hash: `5be9ef4177` Worked: (newest version of Blender that worked as expected) **Short description of error** There is a big difference in rendered preview with the optix denoiser between version 2.83.10 and 2.91.2. As you can see at the picture below, 2.83.10 do ton render glitches in the darker background. But the same scene with same optix denoiser in viewport does. 2.91.2 ![2912.png](https://archive.blender.org/developer/F9602388/2912.png) vs 2.83.10 ![28310.png](https://archive.blender.org/developer/F9602390/28310.png) **Exact steps for others to reproduce the error** The only special thing in the scene is the area light with the power of (- 1 MW) .. yes minus one megawatt for generating darker places. Other is basically standard, some emissions and area lights. there is the file I am working with. Tried even with the geforce rtx 3080 - same problem. [Optix_err.blend](https://archive.blender.org/developer/F9602420/Optix_err.blend)
Author

Added subscriber: @MarcelLegindi

Added subscriber: @MarcelLegindi

Added subscriber: @rjg

Added subscriber: @rjg

That looks like quite a significant difference. Could you please provide a minimal example file that demonstrates this issue? This allows all triagers and developers to investigate the issue on a common basis.

That looks like quite a significant difference. Could you please provide a minimal example file that demonstrates this issue? This allows all triagers and developers to investigate the issue on a common basis.

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Author

With the final render - after you click on the render button the glitches is created by normal input (denoising - input passes - Color + Albedo + Normal). If you set ( Colo r) or ( Color + Albedo ) glitches are away - so the normal input is the problem I guess.

With the final render - after you click on the render button the glitches is created by normal input (denoising - input passes - Color + Albedo + Normal). If you set ( Colo r) or ( Color + Albedo ) glitches are away - so the normal input is the problem I guess.

@MarcelLegindi I'm slightly confused by your description. Does the issue happen for you in the viewport or in the final render (or both)? OptiX denoising is only enabled for the viewport in your project file, but the Denoise compositing node you are referring to in your last comment only affects the final render.

@MarcelLegindi I'm slightly confused by your description. Does the issue happen for you in the viewport or in the final render (or both)? OptiX denoising is only enabled for the viewport in your project file, but the *Denoise* compositing node you are referring to in your last comment only affects the final render.
Author

Well, the issue is the viewport, there is the problem primarily. But secondary the same problem has the final render when you using in denoiser(Optix) Input Passes Color+ Albedo + Normal.

Well, the issue is the viewport, there is the problem primarily. But secondary the same problem has the final render when you using in denoiser(Optix) Input Passes Color+ Albedo + Normal.

Added subscribers: @pmoursnv, @Stefan_Werner

Added subscribers: @pmoursnv, @Stefan_Werner

I am able to reproduce the issue in both the viewport and the final render. For denoising the final render I have:

  • Enabled Render Properties > Sampling > Denoising > Render
  • Set the denoiser to OptiX
  • Enable View Layer Properties > Denoising and set the Input Parameters to Color + Albedo + Normal

Using Color + Albedo only appears to produce a better result. The resulting effect is consistent for 2.90 and later, so this doesn't appear to be a regression. The artifacts still appears when removing the area light with negative power and reducing the power of the other area lights.

Perhaps this is a case that isn't handled well by OptiX and much better by OIDN or there is genuinely an issue. @pmoursnv @Stefan_Werner your input would be welcome.

There appears to be a bit of a confusion about the different denoising options though. The entire compositor setup appears to be unrelated, but also incorrectly setup. If you use the Image socket from the Render Layers node as input to the Denoise node and have OptiX denoiser enable for the render, you are denoising it twice, once with OptiX and once with OIDN. If you want to use the Denoise node for Open Image Denoise, enable to Denoise Data pass in View Layer Properties > Passes > Data then connect the Noisy Image, Denoising Normal and Denoising Depth from the Render Layers node to the Image, Normal and Albedo sockets of the Denoise node.

I am able to reproduce the issue in both the viewport and the final render. For denoising the final render I have: - Enabled *Render Properties > Sampling > Denoising > Render* - Set the denoiser to OptiX - Enable *View Layer Properties > Denoising* and set the *Input Parameters* to *Color + Albedo + Normal* Using *Color + Albedo* only appears to produce a better result. The resulting effect is consistent for 2.90 and later, so this doesn't appear to be a regression. The artifacts still appears when removing the area light with negative power and reducing the power of the other area lights. Perhaps this is a case that isn't handled well by OptiX and much better by OIDN or there is genuinely an issue. @pmoursnv @Stefan_Werner your input would be welcome. There appears to be a bit of a confusion about the different denoising options though. The entire compositor setup appears to be unrelated, but also incorrectly setup. If you use the *Image* socket from the *Render Layers* node as input to the *Denoise* node and have *OptiX* denoiser enable for the render, you are denoising it twice, once with OptiX and once with OIDN. If you want to use the *Denoise* node for Open Image Denoise, enable to *Denoise Data* pass in *View Layer Properties > Passes > Data* then connect the *Noisy Image*, *Denoising Normal* and *Denoising Depth* from the *Render Layers* node to the *Image*, *Normal* and *Albedo* sockets of the *Denoise* node.

Changed status from 'Needs User Info' to: 'Needs Developer To Reproduce'

Changed status from 'Needs User Info' to: 'Needs Developer To Reproduce'
Author

Yes compositor is not cleaned, my bad, sorry about that, I tested different setups to avoid the problem and one of them was to turn off denoiser at all and use denoising in the compositor. I left it untouched. Sorry again

Yes compositor is not cleaned, my bad, sorry about that, I tested different setups to avoid the problem and one of them was to turn off denoiser at all and use denoising in the compositor. I left it untouched. Sorry again

This issue was referenced by 9f89166b52

This issue was referenced by 9f89166b52b1de880c14847a1d0cd830d7c83f5b
Member

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'
Patrick Mours self-assigned this 2021-01-29 13:42:42 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#85148
No description provided.