Fix T85148: OptiX viewport denoising regression

Commit 6e74a8b69f215e63e136cb4c497e738371ac798f changed the denoiser input passes default to
include the normal pass. This does not always produce optimal images though, hence why the
default was previously set to only include the color and albedo passes. This restores that behavior, so
that viewport denoising with OptiX produces the same results as before.